# shipping-emissions

./: .gitignore  README.md  pyproject.toml
data/eu-mrv-annual-reports/: schema.toml
shipping_emissions/: __init__.py  db.py
shipping_emissions/api/: schema.py
shipping_emissions/pipeline/: __main__.py  extract.py  parse.py  pipeline.py  schema.py  typing.py
tests/: test_shipping_emissions.py
tests/pipeline/: test_schema.py
