[tool.poetry]
name = "shipping-emissions"
version = "0.1.0"
description = "API exposing shipping emissions from EU-MRV reports."
authors = ["Chad Stainbank <20968201+stainbank@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.103.8"}
toml = "^0.10.2"
openpyxl = "^3.0.9"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
